--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,17 @@
     </properties>
     <modules>
         <module>common-server</module>
-        <module>suda-fegin-server</module>
         <module>suda-platform-web</module>
         <module>suda-platform-entity</module>
         <module>suda-common-constant</module>
-        <module>suda-platform-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-       <!-- <version>1.5.13.RELEASE</version>-->
         <version>2.1.4.RELEASE</version>
         <relativePath/>
     </parent>
 
-    <!--Dalston 和 Edgware 是基于 Spring Boot 1.5.x 构建的，不支持 Spring Boot 2.0.x-->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -222,6 +218,19 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+
+        <!--微信支付-->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+        <!--微信支付-->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-pay</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
 
