--- a/suda-platform-web/src/main/resources/application-dev.yml
+++ b/suda-platform-web/src/main/resources/application-dev.yml
@@ -1,12 +1,10 @@
 server:
   port: 7087
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://127.0.0.1:8080/eureka/
-#  instance:
-#    lease-expiration-duration-in-seconds: 90 #服务端在收到最后一次心跳之后等待的时间上限，单位为秒，超过则剔除（客户端告诉服务端按照此规则等待自己）
-#    lease-renewal-interval-in-seconds: 30 #定义服务续约任务（心跳）的调用间隔，单位：秒
+  # 配置压缩
+  compression:
+    enabled: true
+    mime-types: application/json,application/xml,text/html,text/xml,text/plain
+    min-response-size: 50KB
 
 spring:
   application:
