--- a/suda-platform-web/src/main/resources/application-dev.yml
+++ b/suda-platform-web/src/main/resources/application-dev.yml
@@ -109,6 +109,11 @@ my-configuration:
       #ethNodesReqAddr: http://127.0.0.1:8545
       #ethNodesReqAddr: https://mainnet.infura.io/3f727c7ce8434106809d5cc2463ff779
       ethNodesReqAddr: https://ropsten.infura.io/3f727c7ce8434106809d5cc2463ff779
+      # 微信配置 测试
+#      wxAppId: wx7c515621ffdbe849
+#      wxAppSecret: eb9f58251cbaf2bc9c109b496997faec
+      wxAppId: wx6f6bd382d150b073
+      wxAppSecret: 6c3e073c7669c12c2834690c685621ca
 
 
 
