添加微信配置

--- a/suda-platform-web/src/main/resources/application-dev.yml
+++ b/suda-platform-web/src/main/resources/application-dev.yml
@@ -112,10 +112,17 @@ my-configuration:
       # 微信配置 测试
 #      wxAppId: wx7c515621ffdbe849
 #      wxAppSecret: eb9f58251cbaf2bc9c109b496997faec
-      wxAppId: wx6f6bd382d150b073
-      wxAppSecret: 6c3e073c7669c12c2834690c685621ca
-
-
+wx:
+  pay:
+    appId: #微信公众号或者小程序等的appid
+    mchId: #微信支付商户号
+    mchKey: #微信支付商户密钥
+    subAppId: #服务商模式下的子商户公众账号ID
+    subMchId: #服务商模式下的子商户号
+    keyPath: # p12证书的位置，可以指定绝对路径，也可以指定类路径（以classpath:开头）
+    # 小程序
+    wxAppId: wx6f6bd382d150b073
+    wxAppSecret: 6c3e073c7669c12c2834690c685621ca
 
 
 
