1、引入 javadoc 插件 2、修改电桩查询，排除已删除电桩

--- a/pom.xml
+++ b/pom.xml
@@ -234,12 +234,17 @@
             <artifactId>weixin-java-pay</artifactId>
             <version>3.4.0</version>
         </dependency>
-
-
-
-
-
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
+            </plugin>
+        </plugins>
+
+    </build>
 
 </project>
